--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD - Build & Push Docker Image
+name: CI/CD - Docker Image Versioning
 
 on:
   push:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout source code
+      # 1. Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -25,23 +25,33 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 4. Build Docker image
+      # 4. Set image tag using Git SHA
+      - name: Set image tag
+        id: vars
+        run: |
+          echo "SHA_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
+      # 5. Build Docker image (SHA + latest)
       - name: Build Docker image
         run: |
-          docker build -t developedbyviv/daily-tracker-app:latest .
+          docker build \
+            -t developedbyviv/daily-tracker-app:${{ env.SHA_TAG }} \
+            -t developedbyviv/daily-tracker-app:latest \
+            .
 
-      # 5. Run container for validation
+      # 6. Validate container
       - name: Validate container
         run: |
-          docker run -d -p 8080:80 developedbyviv/daily-tracker-app:latest
+          docker run -d -p 8080:80 developedbyviv/daily-tracker-app:${{ env.SHA_TAG }}
           sleep 5
           curl -f http://localhost:8080
 
-      # 6. Push image to Docker Hub
-      - name: Push image to Docker Hub
+      # 7. Push images to Docker Hub
+      - name: Push images
         run: |
+          docker push developedbyviv/daily-tracker-app:${{ env.SHA_TAG }}
           docker push developedbyviv/daily-tracker-app:latest
 
-      # 7. Cleanup
-      - name: Cleanup containers
+      # 8. Cleanup
+      - name: Cleanup
         run: docker stop $(docker ps -q)
